ingress-nginx/ingress/ingress_httpd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpd-test
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: httpd
          servicePort: 80
