ingress-nginx/ingress/ingress_myapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
spec:
  rules: 
  - host: myapp.weiwei.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp
          servicePort: 80
